--- a/index.html
+++ b/index.html
@@ -145,11 +145,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-theme-gray"><i class="fa fa-map-marker-alt fa-fw w3-margin-right"></i>Lausanne, Switzerland</h6> 
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2018 - <span class="w3-tag w3-round-large w3-theme">Current</span></h5> 
   
-
           <p>Ph.D. in Computer Science</p>
-          <i>Advisor</i>: Prof. Babak Falsafi
+          <i>Advisor</i>: Prof. Pascal Frossard
           <br>
-          <i>Co-advisor</i>: Prof. Pascal Frossard
+          <i>Co-advisor</i>: Prof. Babak Falsafi
           <hr>
         </div>
         <div class="w3-container">
@@ -175,27 +174,47 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Doctoral Assistant - EPFL / Parallel Systems Architecture Laboratory (PARSA)</b></h5>
           <h6 class="w3-theme-gray"><i class="fa fa-map-marker-alt fa-fw w3-margin-right"></i>Lausanne, Switzerland</h6> 
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept. 2018 - <span class="w3-tag w3-round-large w3-theme">Current</span></h5>
-          <p>Working on hardware accelerators for deep neural networks. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">1</span></a>] so far.</p>
+          <p> 
+            <ul>
+              <li>Working on a neural architecture search framework that optimizes deep neural network (DNN) models for a target hardware platform. </li>
+              <li>Developed a novel scale-out systolic array architecture that increases hardware utilization and power efficiency in DNN accelerators.</li>
+              <li>Developed a novel analog circuit that processes deep neural networks more efficiently. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">1</span></a>].</li>
+              <li>Implemented convolutional neural networks on the integrated FPGA of an Intel HARP platform.</li>
+            </ul> 
+            </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Research Intern - ABB Corporate Research</b></h5>
           <h6 class="w3-theme-gray"><i class="fa fa-map-marker-alt fa-fw w3-margin-right"></i>Baden, Switzerland</h6> 
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb. 2017 - March 2018</h5>
-          <p>Worked on my master's thesis on the subject of approximating system models with deep neural networks for real-time simulations. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">2</span></a>].</p>
+          <p>
+            <ul>
+              <li> Worked on my master's thesis on the subject of approximating system models with deep neural networks for real-time simulations. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">2</span></a>]. </li></p>
+            </ul>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Research Assistant - EPFL / Rigorous System Design Laboratory</b></h5>
           <h6 class="w3-theme-gray"><i class="fa fa-map-marker-alt fa-fw w3-margin-right"></i>Lausanne, Switzerland</h6> 
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept. 2015 - August 2016</h5>
-          <p>Worked on the algorithm design and software implementation of a 3D ultrasound application on an FPGA and a many-core Kalray MPPA-256 platform. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">3</span></a>], [<a href="#publications" style="text-decoration: none"><span class="mycolor">4</span></a>].</p><br>
+          <p>
+            <ul>
+              <li> Worked on the algorithm design and software implementation of a 3D ultrasound application on an FPGA and a many-core Kalray MPPA-256 platform. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">3</span></a>], [<a href="#publications" style="text-decoration: none"><span class="mycolor">4</span></a>]. </li> 
+            </ul>
+          </p>
+          <br>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Hardware Design Engineer - Aselsan Inc. / Division of Defense Systems Technologies</b></h5>
           <h6 class="w3-theme-gray"><i class="fa fa-map-marker-alt fa-fw w3-margin-right"></i>Ankara, Turkey</h6> 
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2014 - August 2015</h5>
-          <p>Worked on the digital hardware design of embedded computers for defense applications. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">5</span></a>].</p><br>
+          <p>
+            <ul>
+            <li> Worked on the digital hardware design of embedded computers for defense applications. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">5</span></a>]. </li>
+            </ul>
+          </p>
+          <br>
         </div>
       </div>
 
