euqinox paper is added

--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Ph.D. in Computer Science</p>
           <i>Advisor</i>: Prof. Pascal Frossard
           <br>
-          <i>Co-advisor</i>: Prof. Babak Falsafi
           <hr>
         </div>
         <div class="w3-container">
@@ -220,6 +219,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-pen-nib fa-fw w3-margin-right w3-xxlarge mycolor"></i>Publications<a id="publications"></a></h2>
+
+        <div class="w3-container">
+          <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Equinox: Training (for Free) on a Custom Inference Accelerator <a href="https://dl.acm.org/doi/abs/10.1145/3466752.3480057" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <i>M. Drumond, L. Coulon, A. Pourhabibi, A. C. Yüzügüler, B. Falsafi, M. Jaggi</i>
+          <div class="mycolor">MICRO-54: 54th Annual IEEE/ACM International Symposium on Microarchitecture, 2021</div>
+          <hr>
+        </div>
 
         <div class="w3-container">
           <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Analog Neural Networks with Deep-submicrometer Nonlinear Synapses <a href="https://ieeexplore.ieee.org/document/8772076" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
