--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                   Python
               </span>          
               <span class="w3-tag w3-round-large w3-theme w3-center w3-border w3-border-white">
-                  VHDL/Verilog
-              </span>          
-              <span class="w3-tag w3-round-large w3-theme w3-center w3-border w3-border-white">
-                  Tensorflow
+                Pytorch/Tensorflow
               </span>
+              <span class="w3-tag w3-round-large w3-theme w3-center w3-border w3-border-white">
+                VHDL/Verilog
+            </span>
               <span class="w3-tag w3-round-large w3-theme w3-center w3-border w3-border-white">
                   CUDA
               </span>
