--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="mycolor"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept. 2018 - <span class="w3-tag w3-round-large w3-theme">Current</span></h5>
           <p> 
             <ul>
-              <li>Working on a neural architecture search framework that optimizes deep neural network (DNN) models for a target hardware platform. </li>
+              <li>Developed a neural architecture search framework that optimizes deep neural networks for target hardware accelerators. </li>
               <li>Developed a novel scale-out systolic array architecture that increases hardware utilization and power efficiency in DNN accelerators.</li>
               <li>Developed a novel analog circuit that processes deep neural networks more efficiently. Published [<a href="#publications" style="text-decoration: none"><span class="mycolor">1</span></a>].</li>
               <li>Implemented convolutional neural networks on the integrated FPGA of an Intel HARP platform.</li>
@@ -221,49 +221,63 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-pen-nib fa-fw w3-margin-right w3-xxlarge mycolor"></i>Publications<a id="publications"></a></h2>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Equinox: Training (for Free) on a Custom Inference Accelerator <a href="https://dl.acm.org/doi/abs/10.1145/3466752.3480057" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;U-Boost NAS: Utilization-Boosted Differentiable Neural Architecture Search, <a href="https://arxiv.org/abs/2203.12412" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <i>A. C. Yüzügüler, N. Dimitriadis, P. Frossard</i>
+          <div class="mycolor">Preprint, 2022</div>
+          <hr>
+        </div>
+
+        <div class="w3-container">
+          <h6 class="mycolor"><b>2</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scale-out Systolic Arrays <a href="https://arxiv.org/abs/2203.11540" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <i>A. C. Yüzügüler, C. Sönmez, M. Drumond, Y. Oh, B. Falsafi, P. Frossard</i>
+          <div class="mycolor">Preprint, 2022</div>
+          <hr>
+        </div>
+
+        <div class="w3-container">
+          <h6 class="mycolor"><b>3</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Equinox: Training (for Free) on a Custom Inference Accelerator <a href="https://dl.acm.org/doi/abs/10.1145/3466752.3480057" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>M. Drumond, L. Coulon, A. Pourhabibi, A. C. Yüzügüler, B. Falsafi, M. Jaggi</i>
           <div class="mycolor">MICRO-54: 54th Annual IEEE/ACM International Symposium on Microarchitecture, 2021</div>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Analog Neural Networks with Deep-submicrometer Nonlinear Synapses <a href="https://ieeexplore.ieee.org/document/8772076" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <h6 class="mycolor"><b>4</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Analog Neural Networks with Deep-submicrometer Nonlinear Synapses <a href="https://ieeexplore.ieee.org/document/8772076" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>A. C. Yüzügüler, F. Celik, M. Drumond, B. Falsafi, P. Frossard</i>
           <div class="mycolor">IEEE Micro Special Issue on Machine Learning Acceleration, 2019</div>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>2</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Towards Commoditizing Simulations of System Models Using Recurrent Neural Networks <a href="https://ieeexplore.ieee.org/document/8587599" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <h6 class="mycolor"><b>5</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Towards Commoditizing Simulations of System Models Using Recurrent Neural Networks <a href="https://ieeexplore.ieee.org/document/8587599" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>A. C. Yüzügüler, A. Moga, C. Franke</i>
           <div class="mycolor">IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm), 2018 </div>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>3</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1024-Channel 3D ultrasound digital beamformer in a single 5W FPGA <a href="https://ieeexplore.ieee.org/document/7927175" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
+          <h6 class="mycolor"><b>6</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1024-Channel 3D ultrasound digital beamformer in a single 5W FPGA <a href="https://ieeexplore.ieee.org/document/7927175" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
           <i>F. Angiolini, A. Ibrahim, W. Simon, A. C. Yüzügüler, M. Arditi, J. P. Thiran and G. De Micheli</i>
           <div class="mycolor">Design, Automation & Test in Europe Conference & Exhibition (DATE), 2017</div>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>4</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Demo) Single-FPGA 3D Ultrasound Beamformer <a href="https://ieeexplore.ieee.org/document/7577387" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
+          <h6 class="mycolor"><b>7</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Demo) Single-FPGA 3D Ultrasound Beamformer <a href="https://ieeexplore.ieee.org/document/7577387" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>A. C. Yüzügüler, W. Simon, A. Ibrahim, F. Angiolini, M. Arditi, J. P. Thiran and G. De Micheli</i>
           <div class="mycolor">International Conference on Field-Programmable Logic and Applications (FPL), 2016</div>
           <hr>
         </div>
           
         <div class="w3-container">
-          <h6 class="mycolor"><b>5</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changing Utilization Rates in Real Time to Investigate FPGA Power Behavior <a href="https://www.xilinx.com/publications/archives/xcell/Xcell89.pdf" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
+          <h6 class="mycolor"><b>8</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changing Utilization Rates in Real Time to Investigate FPGA Power Behavior <a href="https://www.xilinx.com/publications/archives/xcell/Xcell89.pdf" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
           <i>A. C. Yüzügüler and E. Sahin</i>
           <div class="mycolor">Xilinx Xcell Journal Issue 89, 2015</div>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h6 class="mycolor"><b>6</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transformation-invariant Dictionary Learning for Fast Image Classification <a href="https://ieeexplore.ieee.org/document/6854264" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
+          <h6 class="mycolor"><b>9</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transformation-invariant Dictionary Learning for Fast Image Classification <a href="https://ieeexplore.ieee.org/document/6854264" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a> </h6>
           <i>A. C. Yüzügüler, E. Vural and P. Frossard</i>
           <div class="mycolor">IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014</div>
           <hr>
