ECCV paper is added

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h6 class="mycolor"><b>1</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;U-Boost NAS: Utilization-Boosted Differentiable Neural Architecture Search, <a href="https://arxiv.org/abs/2203.12412" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>A. C. Yüzügüler, N. Dimitriadis, P. Frossard</i>
-          <div class="mycolor">Preprint, 2022</div>
+          <div class="mycolor">European Conference on Computer Vision (ECCV), 2022</div>
           <hr>
         </div>
 
