Change SOSA from preprint to ACM TACO

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h6 class="mycolor"><b>2</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scale-out Systolic Arrays <a href="https://arxiv.org/abs/2203.11540" target="_blank"><i class="fas fa-external-link-alt fa-fw w3-margin-right"></i></a></h6>
           <i>A. C. Yüzügüler, C. Sönmez, M. Drumond, Y. Oh, B. Falsafi, P. Frossard</i>
-          <div class="mycolor">Preprint, 2022</div>
+          <div class="mycolor">ACM Transactions on Architecture and Code Optimization, 2022</div>
           <hr>
         </div>
 
